# flutter_rust_demo

./: deployment.md  readme.md
client/web_demo/: index.html
crates/: .dockerignore  Cargo.toml  Dockerfile
crates/cli/deploy/: Cargo.toml
crates/cli/deploy/src/: main.rs
crates/core/config/: .env.loki.test  .env.test  Cargo.toml
crates/core/config/src/: lib.rs
crates/core/control_plane/: Cargo.toml
crates/core/control_plane/src/: alive.rs  client.rs  lib.rs  postgrest_error.rs
crates/core/control_plane/src/resource/: mod.rs  version_deployment.rs
crates/core/supbase_client/: Cargo.toml
crates/core/supbase_client/src/: lib.rs
crates/core/tracing/: Cargo.toml
crates/core/tracing/src/: lib.rs  panic.rs
crates/hub/: .env.test  Cargo.toml
crates/hub/src/: config.rs  lib.rs  main.rs
crates/hub/tests/: common.rs
crates/hub_client/: .env.test  Cargo.toml
crates/hub_client/src/: lib.rs  main.rs
crates/hub_client/tests/: common.rs
crates/tests/: Cargo.toml
crates/tests/tests/: hub.rs
infra/: .env  docker-compose.yml  readme.md  test_curl_supabase.sh
infra/monitoring/: docker-compose.yml  run.sh  test_loki.sh
infra/monitoring/monitoring/grafana/provisioning/datasources/: loki.yml  supabase.yml
infra/monitoring/monitoring/loki/: config.yaml
infra/monitoring/monitoring/loki_proxy/: Dockerfile  haproxy.cfg
infra/monitoring/monitoring/loki_proxy_debug/: Dockerfile  server.py
infra/services/: .env  docker-compose.yml  run.sh  start.sh  test_curl_supabase.sh
infra/supabase/: config.toml  grafana_user.sql  run.sh  seed.sql
infra/supabase/.temp/: project-ref
infra/supabase/migrations/: 20230707143936_seed.sql  20230722145011_remote_commit.sql  20230722145113_init.sql
infra/supabase/tests/database/: agents.test.sql  hello_world.test.sql  hubs.test.sql  profiles.test.sql  runners.test.sql  version_deployment.test.sql
