[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "hub",
    "core/*",
]

exclude = [
    "tests",
]

[workspace.dependencies]
tokio = "1.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
eyre = "0.6"
color-eyre = "0.6"
thiserror = "1.0"