[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[workspace]
members = [
    "hub",
    "hub_client",
    "core/*",
]

exclude = [
    "tests",
    "cli",
]

[workspace.dependencies]
tokio = "1.29.1"
futures-util = "0.3.17"
futures-channel = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }

# Error Handling
eyre = "0.6"
color-eyre = "0.6" # TODO: remove
thiserror = "1.0"

# Communicatin
tokio-tungstenite = "0.20.0"
axum = { version = "0.6.18", features = ["default", "ws", "headers"] }
url = { version = "2.4.0" }

# SSL
openssl = { version = "=0.10.45", features = ["vendored"] }
openssl-sys = "=0.9.80"
openssl-macros = "=0.1.0"
openssl-src = "=111.24.0"

# Dev
serial_test = { version = "2.0", features = ["default","file_locks"] }
gethostname = "0.4.3"
nix = "0.26.2"
hyper = { version = "0.14.27", default-features = false }
shortcut_assert_fs = "0.1.0"