[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
shortcut_assert_fs = "0.1.0"
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "runtime"] }
nix = "0.26.2"
hub = { path = "../hub" }
tokio = "1.29.1"
serial_test = { version = "2.0", features = ["default","file_locks"] }
