[package]
name = "supbase_client"
version = "0.1.0"
edition = "2021"
#version.workspace = true
#edition.workspace = true

[dependencies]
postgrest = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
config = { path = "../config", default-features = false }
strum = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
local_supabase = [ "config/local_supabase" ]