[package]
name = "control_plane"
version.workspace = true
edition.workspace = true

[dependencies]
postgrest = "1.0"

# SSL dependencies required for postgrest
openssl = { workspace = true }
openssl-sys = { workspace = true }
openssl-macros = { workspace = true }
openssl-src = { workspace = true }


serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
config = { path = "../config", default-features = false }
strum = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
default = []
local_supabase = [ "config/local_supabase" ]