[package]
name = "tracing"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-original = { package = "tracing", version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-error = "0.2.0"
config = { path = "../config", default-features = false }
tokio = { workspace = true, features = [ "full" ] }
eyre = { workspace = true }
color-eyre = { workspace = true, features = [ "capture-spantrace" ] }
gethostname = { workspace = true }
backtrace = "0.3"

tracing-loki  = "0.2.3"
# SSL dependencies required for tracing-loki
openssl = { workspace = true }
openssl-sys = { workspace = true }
openssl-macros = { workspace = true }
openssl-src = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
default = []
local_supabase = [ "config/local_supabase" ]